--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,12 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <title>SVIRAF</title>
+    <link id="index_css" rel="stylesheet" type="text/css" />
+    <script id="index_js" type="text/javascript"></script>
     <script>
+        document.getElementById("index_css").href = "css/index.css?_v=" + Math.random();
+        document.getElementById("index_js").src = "js/index.js?_v=" + Math.random();
+
         var selected = 0;
         function selectFile() {        
             var input = document.getElementById("file");
