--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,9 @@
             <tr>
                 <td><input id="input_text" style="width: 100%;" readonly="1" onclick="selectFile('file', 'source', 'input_text');" /></td>
                 <td width="64px"><button style="width: 100%;" onclick="uploadAndFilter();">Button</button></td>
-            </tr>
+                <td><input class="hidden-input" type="file" id="file" name="file" accept="image/x-png,image/jpeg,image/bmp" /></td>
+            <tr>
         </table>
-        <input style="display: none;" type="file" id="file" name="file" accept="image/x-png,image/jpeg,image/bmp" />
         <div id="div_src" style="display: block;">
             <img id="source" />
         </div>
