--- a/templates/index.html
+++ b/templates/index.html
@@ -31,12 +31,12 @@
                 <td><input class="hidden-input" type="file" id="file" name="file" accept="image/x-png,image/jpeg,image/bmp" /></td>
             <tr>
         </table>
-        <div id="div_src" style="display: block;">
-            <img id="source" />
-        </div>
-        <div id="div_res" style="display: block;">
-            <img id="result" />
-        </div>
+        <table style="width: 100%;" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td style="width: 50%;"><img id="source" class="displayer" /></td>
+                <td style="width: 50%;"><img id="result" class="displayer" /></td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
