--- a/css/index.css
+++ b/css/index.css
@@ -7,3 +7,14 @@
     padding-left: 4px;
     padding-right: 4px;
 }
+
+.tags:hover {
+    cursor: pointer;
+}
+
+.displayer {
+    border: 1px solid black;
+    width: 100%;
+    height: 120px;
+    object-fit: contain;
+}
